--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
     "xlsx": "^0.18.5",
-    "marked": "^12.0.2",
-    "@vercel/node": "^3.2.0"
+    "@vercel/node": "^5.4.0",
+    "openai": "^4.52.7",
+    "marked": "^12.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
