--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.14.0",
+    "@vercel/node": "^5.4.0",
+    "dexie": "^4.2.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "marked": "^12.0.2",
+    "openai": "^6.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^2.12.7",
     "react-router-dom": "^6.23.1",
-    "dexie": "^4.2.1",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "xlsx": "^0.18.5",
-    "@vercel/node": "^5.4.0",
-    "marked": "^12.0.2"
+    "recharts": "^2.12.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
